--- a/bmw.html
+++ b/bmw.html
@@ -96,61 +96,61 @@
         <div id="cars">
             <a href="bmw-x5.html" class="car-tile">
                 <button>
-                    <img src="root/images/bmw-x5.png" alt="BMW X5">
+                    <img src="root/images/bmw/bmw-x5.png" alt="BMW X5">
                     <span>BMW X5</span>
                 </button>
             </a>
             <a href="bmw-3series.html" class="car-tile">
                 <button>
-                    <img src="root/images/bmw-3series.png" alt="BMW 3 Series">
+                    <img src="root/images/bmw/bmw-3series.png" alt="BMW 3 Series">
                     <span>BMW 3 Series</span>
                 </button>
             </a>
             <a href="bmw-5series.html" class="car-tile">
                 <button>
-                    <img src="root/images/bmw-5series.png" alt="BMW 5 Series">
+                    <img src="root/images/bmw/bmw-5series.png" alt="BMW 5 Series">
                     <span>BMW 5 Series</span>
                 </button>
             </a>
             <a href="bmw-7series.html" class="car-tile">
                 <button>
-                    <img src="root/images/bmw-7series.png" alt="BMW 7 Series">
+                    <img src="root/images/bmw/bmw-7series.png" alt="BMW 7 Series">
                     <span>BMW 7 Series</span>
                 </button>
             </a>
             <a href="bmw-x3.html" class="car-tile">
                 <button>
-                    <img src="root/images/bmw-x3.png" alt="BMW X3">
+                    <img src="root/images/bmw/bmw-x3.png" alt="BMW X3">
                     <span>BMW X3</span>
                 </button>
             </a>
             <a href="bmw-x7.html" class="car-tile">
                 <button>
-                    <img src="root/images/bmw-x7.png" alt="BMW X7">
+                    <img src="root/images/bmw/bmw-x7.png" alt="BMW X7">
                     <span>BMW X7</span>
                 </button>
             </a>
             <a href="bmw-i4.html" class="car-tile">
                 <button>
-                    <img src="root/images/bmw-i4.png" alt="BMW i4">
+                    <img src="root/images/bmw/bmw-i4.png" alt="BMW i4">
                     <span>BMW i4</span>
                 </button>
             </a>
             <a href="bmw-i7.html" class="car-tile">
                 <button>
-                    <img src="root/images/bmw-i7.png" alt="BMW i7">
+                    <img src="root/images/bmw/bmw-i7.png" alt="BMW i7">
                     <span>BMW i7</span>
                 </button>
             </a>
             <a href="bmw-m3.html" class="car-tile">
                 <button>
-                    <img src="root/images/bmw-m3.png" alt="BMW M3">
+                    <img src="root/images/bmw/bmw-m3.png" alt="BMW M3">
                     <span>BMW M3</span>
                 </button>
             </a>
             <a href="bmw-m5.html" class="car-tile">
                 <button>
-                    <img src="root/images/bmw-m5.png" alt="BMW M5">
+                    <img src="root/images/bmw/bmw-m5.png" alt="BMW M5">
                     <span>BMW M5</span>
                 </button>
             </a>
