--- a/ferrari.html
+++ b/ferrari.html
@@ -96,61 +96,61 @@
         <div id="cars">
             <a href="ferrari-488.html" class="car-tile">
                 <button>
-                    <img src="root/images/488.png" alt="Ferrari 488">
+                    <img src="root/images/ferrari/488.png" alt="Ferrari 488">
                     <span>Ferrari 488</span>
                 </button>
             </a>
             <a href="ferrari-f8.html" class="car-tile">
                 <button>
-                    <img src="root/images/f8.png" alt="Ferrari F8 Tributo">
+                    <img src="root/images/ferrari/f8.png" alt="Ferrari F8 Tributo">
                     <span>Ferrari F8 Tributo</span>
                 </button>
             </a>
             <a href="ferrari-812.html" class="car-tile">
                 <button>
-                    <img src="root/images/812.png" alt="Ferrari 812 Superfast">
+                    <img src="root/images/ferrari/812.png" alt="Ferrari 812 Superfast">
                     <span>Ferrari 812 Superfast</span>
                 </button>
             </a>
             <a href="ferrari-portofino.html" class="car-tile">
                 <button>
-                    <img src="root/images/portofino.png" alt="Ferrari Portofino">
+                    <img src="root/images/ferrari/portofino.png" alt="Ferrari Portofino">
                     <span>Ferrari Portofino</span>
                 </button>
             </a>
             <a href="ferrari-sf90.html" class="car-tile">
                 <button>
-                    <img src="root/images/sf90.png" alt="Ferrari SF90 Stradale">
+                    <img src="root/images/ferrari/sf90.png" alt="Ferrari SF90 Stradale">
                     <span>Ferrari SF90 Stradale</span>
                 </button>
             </a>
             <a href="ferrari-gtc4lusso.html" class="car-tile">
                 <button>
-                    <img src="root/images/gtc4lusso.png" alt="Ferrari GTC4Lusso">
+                    <img src="root/images/ferrari/gtc4lusso.png" alt="Ferrari GTC4Lusso">
                     <span>Ferrari GTC4Lusso</span>
                 </button>
             </a>
             <a href="ferrari-rom.html" class="car-tile">
                 <button>
-                    <img src="root/images/roma.png" alt="Ferrari Roma">
+                    <img src="root/images/ferrari/roma.png" alt="Ferrari Roma">
                     <span>Ferrari Roma</span>
                 </button>
             </a>
             <a href="ferrari-laferrari.html" class="car-tile">
                 <button>
-                    <img src="root/images/laferrari.png" alt="Ferrari LaFerrari">
+                    <img src="root/images/ferrari/laferrari.png" alt="Ferrari LaFerrari">
                     <span>Ferrari LaFerrari</span>
                 </button>
             </a>
             <a href="ferrari-enzo.html" class="car-tile">
                 <button>
-                    <img src="root/images/enzo.png" alt="Ferrari Enzo">
+                    <img src="root/images/ferrari/enzo.png" alt="Ferrari Enzo">
                     <span>Ferrari Enzo</span>
                 </button>
             </a>
             <a href="ferrari-296.html" class="car-tile">
                 <button>
-                    <img src="root/images/296.png" alt="Ferrari 296 GTB">
+                    <img src="root/images/ferrari/296.png" alt="Ferrari 296 GTB">
                     <span>Ferrari 296 GTB</span>
                 </button>
             </a>
