--- a/bmw.html
+++ b/bmw.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <header>
-        <img src="root/images/bmw-logo.png" alt="BMW Logo" style="height:60px; margin-bottom:0.5rem;">
+        <img src="root/images/bmw/bmw-logo.png" alt="BMW Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>BMW Cars</h1>
         <a href="bmw.html" class="brand-link" style="display:inline-block; margin-top:0.5rem; color:#007bff; text-decoration:underline; font-size:1rem;">
             ← BMW Brand Page
