--- a/mercedes.html
+++ b/mercedes.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <header>
-        <img src="root/images/mercedes-logo.png" alt="Mercedes-Benz Logo" style="height:60px; margin-bottom:0.5rem;">
+        <img src="root/images/mercedes/mercedes-logo.png" alt="Mercedes-Benz Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Mercedes-Benz Cars</h1>
     </header>
     <main>
@@ -93,61 +93,61 @@
         <div id="cars">
             <a href="mercedes-c-class.html" class="car-tile">
                 <button>
-                    <img src="root/images/c-class.png" alt="Mercedes-Benz C-Class">
+                    <img src="root/images/mercedes/c-class.png" alt="Mercedes-Benz C-Class">
                     <span>Mercedes-Benz C-Class</span>
                 </button>
             </a>
             <a href="mercedes-e-class.html" class="car-tile">
                 <button>
-                    <img src="root/images/e-class.png" alt="Mercedes-Benz E-Class">
+                    <img src="root/images/mercedes/e-class.png" alt="Mercedes-Benz E-Class">
                     <span>Mercedes-Benz E-Class</span>
                 </button>
             </a>
             <a href="mercedes-s-class.html" class="car-tile">
                 <button>
-                    <img src="root/images/s-class.png" alt="Mercedes-Benz S-Class">
+                    <img src="root/images/mercedes/s-class.png" alt="Mercedes-Benz S-Class">
                     <span>Mercedes-Benz S-Class</span>
                 </button>
             </a>
             <a href="mercedes-glc.html" class="car-tile">
                 <button>
-                    <img src="root/images/glc.png" alt="Mercedes-Benz GLC">
+                    <img src="root/images/mercedes/glc.png" alt="Mercedes-Benz GLC">
                     <span>Mercedes-Benz GLC</span>
                 </button>
             </a>
             <a href="mercedes-gla.html" class="car-tile">
                 <button>
-                    <img src="root/images/gla.png" alt="Mercedes-Benz GLA">
+                    <img src="root/images/mercedes/gla.png" alt="Mercedes-Benz GLA">
                     <span>Mercedes-Benz GLA</span>
                 </button>
             </a>
             <a href="mercedes-gls.html" class="car-tile">
                 <button>
-                    <img src="root/images/gls.png" alt="Mercedes-Benz GLS">
+                    <img src="root/images/mercedes/gls" alt="Mercedes-Benz GLS">
                     <span>Mercedes-Benz GLS</span>
                 </button>
             </a>
             <a href="mercedes-a-class.html" class="car-tile">
                 <button>
-                    <img src="root/images/a-class.png" alt="Mercedes-Benz A-Class">
+                    <img src="root/images/mercedes/a-class.png" alt="Mercedes-Benz A-Class">
                     <span>Mercedes-Benz A-Class</span>
                 </button>
             </a>
             <a href="mercedes-g-class.html" class="car-tile">
                 <button>
-                    <img src="root/images/g-class.png" alt="Mercedes-Benz G-Class">
+                    <img src="root/images/mercedes/g-class.png" alt="Mercedes-Benz G-Class">
                     <span>Mercedes-Benz G-Class</span>
                 </button>
             </a>
             <a href="mercedes-amg-gt.html" class="car-tile">
                 <button>
-                    <img src="root/images/amg-gt.png" alt="Mercedes-AMG GT">
+                    <img src="root/images/mercedes/amg-gt.png" alt="Mercedes-AMG GT">
                     <span>Mercedes-AMG GT</span>
                 </button>
             </a>
             <a href="mercedes-eqc.html" class="car-tile">
                 <button>
-                    <img src="root/images/eqc.png" alt="Mercedes-Benz EQC">
+                    <img src="root/images/mercedes/eqc.png" alt="Mercedes-Benz EQC">
                     <span>Mercedes-Benz EQC</span>
                 </button>
             </a>
