--- a/toyota.html
+++ b/toyota.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="root/images/toyota-logo.png" alt="Toyota Logo" style="height:60px; margin-bottom:0.5rem;">
+        <img src="root/images/toyota/toyota-logo.png" alt="Toyota Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Toyota Cars</h1>
     </header>
     <main>
@@ -17,47 +17,47 @@
             <h2>Available Toyota Cars</h2>
             <div id="cars">
                 <div class="car">
-                    <img src="root/images/corolla.png" alt="Toyota Corolla" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/toyota/corolla.png" alt="Toyota Corolla" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Toyota - Corolla
                 </div>
                 <div class="car">
-                    <img src="root/images/camry.png" alt="Toyota Camry" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/toyota/camry.png" alt="Toyota Camry" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Toyota - Camry
                 </div>
                 <div class="car">
-                    <img src="root/images/rav4.png" alt="Toyota RAV4" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/toyota/rav4.png" alt="Toyota RAV4" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Toyota - RAV4
                 </div>
                 <div class="car">
-                    <img src="root/images/highlander.png" alt="Toyota Highlander" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/toyota/highlander.png" alt="Toyota Highlander" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Toyota - Highlander
                 </div>
                 <div class="car">
-                    <img src="root/images/prius.png" alt="Toyota Prius" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/toyota/prius.png" alt="Toyota Prius" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Toyota - Prius
                 </div>
                 <div class="car">
-                    <img src="root/images/tacoma.png" alt="Toyota Tacoma" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/toyota/tacoma.png" alt="Toyota Tacoma" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Toyota - Tacoma
                 </div>
                 <div class="car">
-                    <img src="root/images/tundra.png" alt="Toyota Tundra" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/toyota/tundra.png" alt="Toyota Tundra" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Toyota - Tundra
                 </div>
                 <div class="car">
-                    <img src="root/images/avalon.png" alt="Toyota Avalon" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/toyota/avalon.png" alt="Toyota Avalon" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Toyota - Avalon
                 </div>
                 <div class="car">
-                    <img src="root/images/4runner.png" alt="Toyota 4Runner" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/toyota/4runner.png" alt="Toyota 4Runner" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Toyota - 4Runner
                 </div>
                 <div class="car">
-                    <img src="root/images/sienna.png" alt="Toyota Sienna" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/toyota/sienna.png" alt="Toyota Sienna" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Toyota - Sienna
                 </div>
                 <div class="car">
-                    <img src="root/images/supra.png" alt="Toyota Supra" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/toyota/supra.png" alt="Toyota Supra" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Toyota - Supra
                 </div>
             </div>
