--- a/bmw.html
+++ b/bmw.html
@@ -157,7 +157,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2023 Car Browsing App</p>
+        <p>&copy; Z Car Browsing App</p>
     </footer>
 </body>
 </html>
