--- a/honda.html
+++ b/honda.html
@@ -86,7 +86,7 @@
 </head>
 <body>
     <header>
-        <img src="root/images/honda-logo.png" alt="Honda Logo" style="height:60px; margin-bottom:0.5rem;">
+        <img src="root/images/honda/honda-logo.png" alt="Honda Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Honda Top 20 Selling Cars</h1>
     </header>
     <main>
@@ -94,121 +94,121 @@
         <div id="cars">
             <a href="honda-civic.html" class="car-tile">
                 <button>
-                    <img src="root/images/civic.png" alt="Honda Civic">
+                    <img src="root/images/honda/civic.png" alt="Honda Civic">
                     <span>Honda Civic</span>
                 </button>
             </a>
             <a href="honda-accord.html" class="car-tile">
                 <button>
-                    <img src="root/images/accord.png" alt="Honda Accord">
+                    <img src="root/images/honda/accord.png" alt="Honda Accord">
                     <span>Honda Accord</span>
                 </button>
             </a>
             <a href="honda-crv.html" class="car-tile">
                 <button>
-                    <img src="root/images/crv.png" alt="Honda CR-V">
+                    <img src="root/images/honda/crv.png" alt="Honda CR-V">
                     <span>Honda CR-V</span>
                 </button>
             </a>
             <a href="honda-hrv.html" class="car-tile">
                 <button>
-                    <img src="root/images/hrv.png" alt="Honda HR-V">
+                    <img src="root/images/honda/hrv.png" alt="Honda HR-V">
                     <span>Honda HR-V</span>
                 </button>
             </a>
             <a href="honda-fit.html" class="car-tile">
                 <button>
-                    <img src="root/images/fit.png" alt="Honda Fit (Jazz)">
+                    <img src="root/images/honda/fit.png" alt="Honda Fit (Jazz)">
                     <span>Honda Fit (Jazz)</span>
                 </button>
             </a>
             <a href="honda-pilot.html" class="car-tile">
                 <button>
-                    <img src="root/images/pilot.png" alt="Honda Pilot">
+                    <img src="root/images/honda/pilot.png" alt="Honda Pilot">
                     <span>Honda Pilot</span>
                 </button>
             </a>
             <a href="honda-odyssey.html" class="car-tile">
                 <button>
-                    <img src="root/images/odyssey.png" alt="Honda Odyssey">
+                    <img src="root/images/honda/odyssey.png" alt="Honda Odyssey">
                     <span>Honda Odyssey</span>
                 </button>
             </a>
             <a href="honda-ridgeline.html" class="car-tile">
                 <button>
-                    <img src="root/images/ridgeline.png" alt="Honda Ridgeline">
+                    <img src="root/images/honda/ridgeline.png" alt="Honda Ridgeline">
                     <span>Honda Ridgeline</span>
                 </button>
             </a>
             <a href="honda-insight.html" class="car-tile">
                 <button>
-                    <img src="root/images/insight.png" alt="Honda Insight">
+                    <img src="root/images/honda/insight.png" alt="Honda Insight">
                     <span>Honda Insight</span>
                 </button>
             </a>
             <a href="honda-passport.html" class="car-tile">
                 <button>
-                    <img src="root/images/passport.png" alt="Honda Passport">
+                    <img src="root/images/honda/passport.png" alt="Honda Passport">
                     <span>Honda Passport</span>
                 </button>
             </a>
             <a href="honda-element.html" class="car-tile">
                 <button>
-                    <img src="root/images/element.png" alt="Honda Element">
+                    <img src="root/images/honda/element.png" alt="Honda Element">
                     <span>Honda Element</span>
                 </button>
             </a>
             <a href="honda-prelude.html" class="car-tile">
                 <button>
-                    <img src="root/images/prelude.png" alt="Honda Prelude">
+                    <img src="root/images/honda/prelude.png" alt="Honda Prelude">
                     <span>Honda Prelude</span>
                 </button>
             </a>
             <a href="honda-s2000.html" class="car-tile">
                 <button>
-                    <img src="root/images/s2000.png" alt="Honda S2000">
+                    <img src="root/images/honda/s2000.png" alt="Honda S2000">
                     <span>Honda S2000</span>
                 </button>
             </a>
             <a href="honda-crosstour.html" class="car-tile">
                 <button>
-                    <img src="root/images/crosstour.png" alt="Honda Crosstour">
+                    <img src="root/images/honda/crosstour.png" alt="Honda Crosstour">
                     <span>Honda Crosstour</span>
                 </button>
             </a>
             <a href="honda-clarity.html" class="car-tile">
                 <button>
-                    <img src="root/images/clarity.png" alt="Honda Clarity">
+                    <img src="root/images/honda/clarity.png" alt="Honda Clarity">
                     <span>Honda Clarity</span>
                 </button>
             </a>
             <a href="honda-crz.html" class="car-tile">
                 <button>
-                    <img src="root/images/crz.png" alt="Honda CR-Z">
+                    <img src="root/images/honda/crz.png" alt="Honda CR-Z">
                     <span>Honda CR-Z</span>
                 </button>
             </a>
             <a href="honda-city.html" class="car-tile">
                 <button>
-                    <img src="root/images/city.png" alt="Honda City">
+                    <img src="root/images/honda/city.png" alt="Honda City">
                     <span>Honda City</span>
                 </button>
             </a>
             <a href="honda-brio.html" class="car-tile">
                 <button>
-                    <img src="root/images/brio.png" alt="Honda Brio">
+                    <img src="root/images/honda/brio.png" alt="Honda Brio">
                     <span>Honda Brio</span>
                 </button>
             </a>
             <a href="honda-stream.html" class="car-tile">
                 <button>
-                    <img src="root/images/stream.png" alt="Honda Stream">
+                    <img src="root/images/honda/stream.png" alt="Honda Stream">
                     <span>Honda Stream</span>
                 </button>
             </a>
             <a href="honda-freed.html" class="car-tile">
                 <button>
-                    <img src="root/images/freed.png" alt="Honda Freed">
+                    <img src="root/images/honda/freed.png" alt="Honda Freed">
                     <span>Honda Freed</span>
                 </button>
             </a>
