--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             </select>
         </section>
         <section id="car-list">
-            <h2>Available Cars</h2>
+            <h2>Popular Cars</h2>
             <div id="cars">
                 <div class="car" data-brand="Toyota">
                     <a href="toyota-corolla.html" style="text-decoration: none;">
                         <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
-                            <img src="root/images/corolla.png" alt="Toyota Corolla" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                            <img src="root/images/toyota/corolla.png" alt="Toyota Corolla" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                             <span style="display: block; text-align: center; font-weight: bold; color: #f0f0f0;">Toyota - Corolla</span>
                         </button>
                     </a>
@@ -42,7 +42,7 @@
                 <div class="car" data-brand="Honda">
                     <a href="honda-civic.html" style="text-decoration: none;">
                         <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
-                            <img src="root/images/civic.png" alt="Honda Civic" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                            <img src="root/images/honda/civic.png" alt="Honda Civic" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                             <span style="display: block; text-align: center; font-weight: bold; color: #f0f0f0;">Honda - Civic</span>
                         </button>
                     </a>
@@ -50,7 +50,7 @@
                 <div class="car" data-brand="Ford">
                     <a href="ford-mustang.html" style="text-decoration: none;">
                         <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
-                            <img src="root/images/mustang.png" alt="Ford Mustang" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                            <img src="root/images/ford/mustang.png" alt="Ford Mustang" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                             <span style="display: block; text-align: center; font-weight: bold; color: #f0f0f0;">Ford - Mustang</span>
                         </button>
                     </a>
@@ -66,7 +66,7 @@
                 <div class="car" data-brand="BMW">
                     <a href="bmw-x5.html" style="text-decoration: none;">
                         <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
-                            <img src="root/images/bmw-x5.png" alt="BMW X5" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                            <img src="root/images/bmw/bmw-x5.png" alt="BMW X5" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                             <span style="display: block; text-align: center; font-weight: bold; color: #f0f0f0;">BMW - X5</span>
                         </button>
                     </a>
@@ -83,7 +83,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Car Browsing App</p>
+        <p>&copy; Z Car Browsing App</p>
     </footer>
     <script src="root/js/scripts.js"></script>
 </body>
