--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="car" data-brand="Bugatti">
                     <a href="bugatti-tourbillon.html" style="text-decoration: none;">
                         <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
-                            <img src="root/images/tourbillon.png" alt="Bugatti Tourbillon" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                            <img src="root/images/bugatti/tourbillon.png alt="Bugatti Tourbillon" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                             <span style="display: block; text-align: center; font-weight: bold; color: #f0f0f0;">Bugatti - Tourbillon</span>
                         </button>
                     </a>
