--- a/ford.html
+++ b/ford.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="root/images/ford-logo.png" alt="Ford Logo" style="height:60px; margin-bottom:0.5rem;">
+        <img src="root/images/ford/ford-logo.png" alt="Ford Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Ford Cars</h1>
     </header>
     <main>
@@ -18,121 +18,121 @@
             <div id="cars">
                 <a href="ford-mustang.html" class="car-tile">
                     <button>
-                        <img src="root/images/mustang.png" alt="Ford Mustang" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/mustang.png" alt="Ford Mustang" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Mustang</span>
                     </button>
                 </a>
                 <a href="ford-f150.html" class="car-tile">
                     <button>
-                        <img src="root/images/f150.png" alt="Ford F-150" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/f150.png" alt="Ford F-150" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - F-150</span>
                     </button>
                 </a>
                 <a href="ford-escape.html" class="car-tile">
                     <button>
-                        <img src="root/images/escape.png" alt="Ford Escape" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/escape.png" alt="Ford Escape" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Escape</span>
                     </button>
                 </a>
                 <a href="ford-explorer.html" class="car-tile">
                     <button>
-                        <img src="root/images/explorer.png" alt="Ford Explorer" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/explorer.png" alt="Ford Explorer" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Explorer</span>
                     </button>
                 </a>
                 <a href="ford-bronco.html" class="car-tile">
                     <button>
-                        <img src="root/images/bronco.png" alt="Ford Bronco" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/bronco.png" alt="Ford Bronco" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Bronco</span>
                     </button>
                 </a>
                 <a href="ford-ranger.html" class="car-tile">
                     <button>
-                        <img src="root/images/ranger.png" alt="Ford Ranger" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/ranger.png" alt="Ford Ranger" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Ranger</span>
                     </button>
                 </a>
                 <a href="ford-edge.html" class="car-tile">
                     <button>
-                        <img src="root/images/edge.png" alt="Ford Edge" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/edge.png" alt="Ford Edge" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Edge</span>
                     </button>
                 </a>
                 <a href="ford-fusion.html" class="car-tile">
                     <button>
-                        <img src="root/images/fusion.png" alt="Ford Fusion" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/fusion.png" alt="Ford Fusion" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Fusion</span>
                     </button>
                 </a>
                 <a href="ford-expedition.html" class="car-tile">
                     <button>
-                        <img src="root/images/expedition.png" alt="Ford Expedition" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/expedition.png" alt="Ford Expedition" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Expedition</span>
                     </button>
                 </a>
                 <a href="ford-maverick.html" class="car-tile">
                     <button>
-                        <img src="root/images/maverick.png" alt="Ford Maverick" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/maverick.png" alt="Ford Maverick" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Maverick</span>
                     </button>
                 </a>
                 <a href="ford-gt.html" class="car-tile">
                     <button>
-                        <img src="root/images/gt.png" alt="Ford GT" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/gt.png" alt="Ford GT" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - GT</span>
                     </button>
                 </a>
                 <a href="ford-transit.html" class="car-tile">
                     <button>
-                        <img src="root/images/transit.png" alt="Ford Transit" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/transit.png" alt="Ford Transit" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Transit</span>
                     </button>
                 </a>
                 <a href="ford-focus.html" class="car-tile">
                     <button>
-                        <img src="root/images/focus.png" alt="Ford Focus" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/focus.png" alt="Ford Focus" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Focus</span>
                     </button>
                 </a>
                 <a href="ford-taurus.html" class="car-tile">
                     <button>
-                        <img src="root/images/taurus.png" alt="Ford Taurus" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/taurus.png" alt="Ford Taurus" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Taurus</span>
                     </button>
                 </a>
                 <a href="ford-ecosport.html" class="car-tile">
                     <button>
-                        <img src="root/images/ecosport.png" alt="Ford EcoSport" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/ecosport.png" alt="Ford EcoSport" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - EcoSport</span>
                     </button>
                 </a>
                 <a href="ford-flex.html" class="car-tile">
                     <button>
-                        <img src="root/images/flex.png" alt="Ford Flex" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/flex.png" alt="Ford Flex" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Flex</span>
                     </button>
                 </a>
                 <a href="ford-cmax.html" class="car-tile">
                     <button>
-                        <img src="root/images/cmax.png" alt="Ford C-Max" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/cmax.png" alt="Ford C-Max" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - C-Max</span>
                     </button>
                 </a>
                 <a href="ford-fiesta.html" class="car-tile">
                     <button>
-                        <img src="root/images/fiesta.png" alt="Ford Fiesta" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/fiesta.png" alt="Ford Fiesta" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Fiesta</span>
                     </button>
                 </a>
                 <a href="ford-everest.html" class="car-tile">
                     <button>
-                        <img src="root/images/everest.png" alt="Ford Everest" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/everest.png" alt="Ford Everest" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Everest</span>
                     </button>
                 </a>
                 <a href="ford-puma.html" class="car-tile">
                     <button>
-                        <img src="root/images/puma.png" alt="Ford Puma" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <img src="root/images/ford/puma.png" alt="Ford Puma" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                         <span>Ford - Puma</span>
                     </button>
                 </a>
