--- a/dodge.html
+++ b/dodge.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <header>
-        <img src="root/images/dodge-logo.png" alt="Dodge Logo" style="height:60px; margin-bottom:0.5rem;">
+        <img src="root/images/dodge/dodge-logo.png" alt="Dodge Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Dodge Cars</h1>
     </header>
     <main>
@@ -93,61 +93,61 @@
         <div id="cars">
             <a href="dodge-charger.html" class="car-tile">
                 <button>
-                    <img src="root/images/charger.png" alt="Dodge Charger">
+                    <img src="root/images/dodge/charger.png" alt="Dodge Charger">
                     <span>Dodge Charger</span>
                 </button>
             </a>
             <a href="dodge-challenger.html" class="car-tile">
                 <button>
-                    <img src="root/images/challenger.png" alt="Dodge Challenger">
+                    <img src="root/images/dodge/challenger.png" alt="Dodge Challenger">
                     <span>Dodge Challenger</span>
                 </button>
             </a>
             <a href="dodge-durango.html" class="car-tile">
                 <button>
-                    <img src="root/images/durango.png" alt="Dodge Durango">
+                    <img src="root/images/dodge/durango.png" alt="Dodge Durango">
                     <span>Dodge Durango</span>
                 </button>
             </a>
             <a href="dodge-journey.html" class="car-tile">
                 <button>
-                    <img src="root/images/journey.png" alt="Dodge Journey">
+                    <img src="root/images/dodge/journey.png" alt="Dodge Journey">
                     <span>Dodge Journey</span>
                 </button>
             </a>
             <a href="dodge-grandcaravan.html" class="car-tile">
                 <button>
-                    <img src="root/images/grandcaravan.png" alt="Dodge Grand Caravan">
+                    <img src="root/images/dodge/grandcaravan.png" alt="Dodge Grand Caravan">
                     <span>Dodge Grand Caravan</span>
                 </button>
             </a>
             <a href="dodge-ram.html" class="car-tile">
                 <button>
-                    <img src="root/images/ram.png" alt="Dodge Ram">
+                    <img src="root/images/dodge/ram.png" alt="Dodge Ram">
                     <span>Dodge Ram</span>
                 </button>
             </a>
             <a href="dodge-viper.html" class="car-tile">
                 <button>
-                    <img src="root/images/viper.png" alt="Dodge Viper">
+                    <img src="root/images/dodge/viper.png" alt="Dodge Viper">
                     <span>Dodge Viper</span>
                 </button>
             </a>
             <a href="dodge-dart.html" class="car-tile">
                 <button>
-                    <img src="root/images/dart.png" alt="Dodge Dart">
+                    <img src="root/images/dodge/dart.png" alt="Dodge Dart">
                     <span>Dodge Dart</span>
                 </button>
             </a>
             <a href="dodge-nitro.html" class="car-tile">
                 <button>
-                    <img src="root/images/nitro.png" alt="Dodge Nitro">
+                    <img src="root/images/dodge/nitro.png" alt="Dodge Nitro">
                     <span>Dodge Nitro</span>
                 </button>
             </a>
             <a href="dodge-caliber.html" class="car-tile">
                 <button>
-                    <img src="root/images/caliber.png" alt="Dodge Caliber">
+                    <img src="root/images/dodge/caliber.png" alt="Dodge Caliber">
                     <span>Dodge Caliber</span>
                 </button>
             </a>
