--- a/tesla.html
+++ b/tesla.html
@@ -82,55 +82,68 @@
         .back-button:hover {
             background-color: #0056b3;
         }
+        .ev-indicator {
+            display: inline-block;
+            width: 18px;
+            height: 18px;
+            background: #007bff;
+            transform: rotate(45deg);
+            margin-left: 0.5rem;
+            vertical-align: middle;
+            border-radius: 4px;
+            border: 2px solid #fff;
+            box-shadow: 0 0 4px #007bff;
+        }
     </style>
 </head>
 <body>
     <header>
-        <img src="root/images/tesla-logo.png" alt="Tesla Logo" style="height:60px; margin-bottom:0.5rem;">
+        <img src="root/images/tesla/tesla-logo.png" alt="Tesla Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Tesla Cars</h1>
+        <span class="ev-indicator" title="All Tesla cars are electric"></span>
     </header>
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
         <div id="cars">
             <a href="tesla-model-s.html" class="car-tile">
                 <button>
-                    <img src="root/images/model-s.png" alt="Tesla Model S">
+                    <img src="root/images/tesla/model-s.png" alt="Tesla Model S">
                     <span>Tesla Model S</span>
                 </button>
             </a>
             <a href="tesla-model-3.html" class="car-tile">
                 <button>
-                    <img src="root/images/model-3.png" alt="Tesla Model 3">
+                    <img src="root/images/tesla/model-3.png" alt="Tesla Model 3">
                     <span>Tesla Model 3</span>
                 </button>
             </a>
             <a href="tesla-model-x.html" class="car-tile">
                 <button>
-                    <img src="root/images/model-x.png" alt="Tesla Model X">
+                    <img src="root/images/tesla/model-x.png" alt="Tesla Model X">
                     <span>Tesla Model X</span>
                 </button>
             </a>
             <a href="tesla-model-y.html" class="car-tile">
                 <button>
-                    <img src="root/images/model-y.png" alt="Tesla Model Y">
+                    <img src="root/images/tesla/model-y.png" alt="Tesla Model Y">
                     <span>Tesla Model Y</span>
                 </button>
             </a>
             <a href="tesla-cybertruck.html" class="car-tile">
                 <button>
-                    <img src="root/images/cybertruck.png" alt="Tesla Cybertruck">
+                    <img src="root/images/tesla/cybertruck.png" alt="Tesla Cybertruck">
                     <span>Tesla Cybertruck</span>
                 </button>
             </a>
             <a href="tesla-roadster.html" class="car-tile">
                 <button>
-                    <img src="root/images/roadster.png" alt="Tesla Roadster">
+                    <img src="root/images/tesla/roadster.png" alt="Tesla Roadster">
                     <span>Tesla Roadster</span>
                 </button>
             </a>
             <a href="tesla-semi.html" class="car-tile">
                 <button>
-                    <img src="root/images/semi.png" alt="Tesla Semi">
+                    <img src="root/images/tesla/semi.png" alt="Tesla Semi">
                     <span>Tesla Semi</span>
                 </button>
             </a>
