--- a/bugatti.html
+++ b/bugatti.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <header>
-        <img src="root/images/bugatti-logo.png" alt="Bugatti Logo" style="height:60px; margin-bottom:0.5rem;">
+        <img src="root/images/bugatti/bugatti-logo.png" alt="Bugatti Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Bugatti Cars</h1>
     </header>
     <main>
@@ -93,43 +93,43 @@
         <div id="cars">
             <a href="bugatti-tourbillon.html" class="car-tile">
                 <button>
-                    <img src="root/images/tourbillon.png" alt="Bugatti Tourbillon">
+                    <img src="root/images/bugatti/tourbillion.png" alt="Bugatti Tourbillon">
                     <span>Bugatti Tourbillon</span>
                 </button>
             </a>
             <a href="bugatti-chiron.html" class="car-tile">
                 <button>
-                    <img src="root/images/chiron.png" alt="Bugatti Chiron">
+                    <img src="root/images/bugatti/chiron.png" alt="Bugatti Chiron">
                     <span>Bugatti Chiron</span>
                 </button>
             </a>
             <a href="bugatti-divo.html" class="car-tile">
                 <button>
-                    <img src="root/images/divo.png" alt="Bugatti Divo">
+                    <img src="root/images/bugatti/divo.png" alt="Bugatti Divo">
                     <span>Bugatti Divo</span>
                 </button>
             </a>
             <a href="bugatti-centodieci.html" class="car-tile">
                 <button>
-                    <img src="root/images/centodieci.png" alt="Bugatti Centodieci">
+                    <img src="root/images/bugatti/centodieci.png" alt="Bugatti Centodieci">
                     <span>Bugatti Centodieci</span>
                 </button>
             </a>
             <a href="bugatti-bolide.html" class="car-tile">
                 <button>
-                    <img src="root/images/bolide.png" alt="Bugatti Bolide">
+                    <img src="root/images/bugatti/bolide.png" alt="Bugatti Bolide">
                     <span>Bugatti Bolide</span>
                 </button>
             </a>
             <a href="bugatti-veyron.html" class="car-tile">
                 <button>
-                    <img src="root/images/veyron.png" alt="Bugatti Veyron">
+                    <img src="root/images/bugatti/veyron.png" alt="Bugatti Veyron">
                     <span>Bugatti Veyron</span>
                 </button>
             </a>
             <a href="bugatti-eb110.html" class="car-tile">
                 <button>
-                    <img src="root/images/eb110.png" alt="Bugatti EB110">
+                    <img src="root/images/bugatti/eb110.png" alt="Bugatti EB110">
                     <span>Bugatti EB110</span>
                 </button>
             </a>
